hphp/hack/test/typecheck/await_in_expressions5.php.exp
ERROR: File "await_in_expressions5.php", line 4, characters 10-23:
Cannot use unstable feature: `allow_conditional_await_syntax` (Parsing[1002])
