hphp/hack/test/typecheck/await_in_expressions5.php
<?hh // strict

async function f1(Awaitable<int> $a): Awaitable<void> {
  while ((await $a) > 1) {
  }
}
